--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
-	<link rel="stylesheet" type="text/css" href="style/site.css">
-	
+
+	<link href="style/index.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
